# fast-umap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bench.sh  generate_images.sh  run_all.sh
benches/: umap_bench.rs
benches/results/: benchmark_results.md  comparison_apple_m3_max.md  cpu_apple_m3_max.md  gpu_apple_m3_max.md
examples/: advanced.rs  bench_mnist.rs  crate_comparison.rs  mnist.rs  mnist_benchmark.rs  simple.rs  train.rs
figures/: comparison_apple_m3_max.md  cpu_apple_m3_max.md  cpu_apple_silicon_aarch64.md  crate_comparison.json  crate_comparison.md  gpu_apple_m3_max.md
src/: backend.rs  chart.rs  distance.rs  distances.rs  lib.rs  loss.rs  macros.rs  main.rs  model.rs  normalizer.rs  prelude.rs  train.rs  utils.rs
src/kernels/: backward.rs  euclidian.rs  forward.rs  kernel.rs  kernels.rs  mod.rs
src/kernels/euclidean/: backward.rs  forward.rs  kernel.rs  mod.rs
src/kernels/knn/: backward.rs  forward.rs  kernel.rs
src/train/: config.rs  get_distance_by_metric.rs  mod.rs  train_sparse.rs
tests/: tests.rs
