[package]
name = "fast-umap"
description = "Configurable UMAP (Uniform Manifold Approximation and Projection) in Rust"
keywords = ["UMAP", "dimensionality", "manifold", "machine-learning", "GPU"]
categories = ["science", "mathematics", "visualization"]
authors = ["Eugene Hauptmann"]
repository = "https://github.com/eugenehp/fast-map"
homepage = "https://github.com/eugenehp/fast-map"
license = "MIT"
version = "0.0.2"
edition = "2021"

[dependencies]
burn = { version = "~0.15", features = ["train", "wgpu"] }
indicatif = "0.17.9"
ndarray = "0.16.1"
plotters = "0.3.7"
prettytable = "0.10.0"
rand = "0.8.5"
serde = "1.0.216"

[dev-dependencies]
mnist = { version = "0.6.1", git = "https://github.com/eugenehp/mnist.git", features = ["download"] }
