[package]
name = "fast-umap"
description = "Configurable UMAP (Uniform Manifold Approximation and Projection) in Rust"
keywords = ["UMAP", "dimensionality", "manifold", "machine-learning", "GPU"]
categories = ["science", "mathematics", "visualization"]
authors = ["Eugene Hauptmann"]
repository = "https://github.com/eugenehp/fast-map"
homepage = "https://github.com/eugenehp/fast-map"
license = "MIT"
version = "0.0.2"
edition = "2021"

[dependencies]
burn = { version = "0.18", features = ["train", "wgpu", "autodiff", "autotune"] }
burn-cubecl = { version = "0.18.0", features = ["burn-autodiff"] }
# burn-jit = { version = "0.16.1", features = ["burn-autodiff"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
cubecl = { version = "0.6.0", features = ["wgpu"] }
hsl = "0.1.1"
indicatif = "0.18"
ndarray = "0.16.1"
num = "0.4.3"
num-traits = "0.2.19"
plotters = { version = "0.3.7", optional = true }
prettytable = "0.10.0"
rand = "0.9.2"
rayon = "1.10.0"
serde = "1.0.216"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
mnist = { version = "0.6.1", git = "https://github.com/eugenehp/mnist.git", features = ["download"] }

[features]
default = []
verbose = ["tracing", "tracing-subscriber"]
plots = ["plotters"]
